--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,5 @@
 [submodule "lib/murky"]
 	path = lib/murky
 	url = https://github.com/dmfxyz/murky
+[submodule "lib/foundry-devops"]
+	path = lib/foundry-devops
